--- a/CurseEater.html
+++ b/CurseEater.html
@@ -88,8 +88,8 @@
 											also expect the unexpected! 
 											The weather system is highly modular and once perfected may likely become available on the UE marketplace for free (!!!).
 										</p>
-										<!-- add gif of thunderstorm -->
-										<a class="image featured"><img src="images/CurseEaterCont/CurseEaterThunderstorm.gif" style = "width: 90%; margin: auto; margin-top: 10%;" /></a>
+										<!-- add gif of thunderstorm
+										<a class="image featured"><img src="images/CurseEaterCont/CurseEaterThunderstorm.gif" style = "width: 90%; margin: auto; margin-top: 10%;" /></a>-->
 										<p>
 											The weather system is not the only driver of difficulty, though. The enemies in the game will, as one can expect, become tougher throughout 
 											the game. As the player progresses, enemies will strike harder, have more health, and use different methods of attacking. Each enemy will have more optimal 
@@ -98,8 +98,8 @@
 											also be strenghtened depending on the current weather. The intense occurence will not be a total surprise, as the moons orbit will seemingly come to an 
 											eclipse as the in-game days pass.
 										</p>
-									<!-- add gif of eclipse -->
-									<a class="image featured"><img src="images/CurseEaterCont/CurseEaterEclipse.gif" style = "width: 90%; margin: auto; margin-top: 10%;" /></a>
+									<!-- add gif of eclipse 
+									<a class="image featured"><img src="images/CurseEaterCont/CurseEaterEclipse.gif" style = "width: 90%; margin: auto; margin-top: 10%;" /></a>-->
 										<p>
 											The combat of Curse Eater revolves around schools of combat. I got this idea from the anime Demon Slayer. The show gives some of its characters "schools" that 
 											allow these characters to use abilities based on certain elements. The idea seemed pleasant because it gives the player the choice of preference. Some enemies may be 
