--- a/Portfolio.html
+++ b/Portfolio.html
@@ -73,7 +73,7 @@
 										</footer>
 									</section>
 								</div>
-								<div class="col-4 col-6-medium col-12-small">
+								<!--<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
 										<a href="CurseEater.html"class="image featured"><img src="images/CurseEaterCont/CurseEaterBanner.gif" style="padding-top: 15%; padding-bottom:5%;"/></a>
 										<header>
@@ -88,7 +88,7 @@
 											</ul>
 										</footer>
 									</section>
-								</div>
+								</div>-->
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
 										<a href="https://github.com/GeorgesABrunet/Twisted-Loop/tree/master/BigBrainGameJam" class="image featured"><img src="images/GameJamPics/TDLGameplay.png" alt="" /></a>
