--- a/UE4-Tutorials.html
+++ b/UE4-Tutorials.html
@@ -59,12 +59,28 @@
 								<!-- Start UE4 Tutorials -->
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
+										<a href="MultiLayeredColorFog.html"class="image featured"><img src="images/MLCFPics/FogLayersBanner.png" alt="" style="padding-top: 15%; padding-bottom:5%;"/></a>
+										<header>
+											<h3>Multi Layered Colored Fog</h3>
+										</header>
+										<p>
+											This tutorial entails how to implement a multi-layered colored fog system through post process materials.
+										</p>
+										<footer>
+											<ul class="actions">
+												<li><a href="MultiLayeredColorFog.html" class="button alt">View Implementation</a></li>
+											</ul>
+										</footer>
+									</section>
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+									<section class="box">
 										<a href="CelShader.html"class="image featured"><img src="images/CelShaderPics/CelShaderPreview.png" alt="" /></a>
 										<header>
 											<h3>Cel Shader</h3>
 										</header>
 										<p>
-											This tutorial entails how to implement a cel shader for a "paper-like" feel to your production in Unreal Engine 4.
+											This tutorial entails how to implement a cel shader for a "paper-like" feel to your production.
 										</p>
 										<footer>
 											<ul class="actions">
@@ -80,7 +96,7 @@
 											<h3>Persistent Trails with Render Targets</h3>
 										</header>
 										<p>
-											This tutorial entails how to implement persistent trails such as footsteps in snow, sand, mud, and more in Unreal Engine 4.
+											This tutorial entails how to implement persistent trails such as footsteps in snow, sand, mud, and more.
 										</p>
 										<footer>
 											<ul class="actions">
@@ -96,7 +112,7 @@
 											<h3>Material Outlines</h3>
 										</header>
 										<p>
-											This tutorial entails how to implement material outlines using post-process materials to make assets stand out in Unreal Engine 4.
+											This tutorial entails how to implement material outlines using post-process materials to make assets stand out.
 										</p>
 										<footer>
 											<ul class="actions">
@@ -105,57 +121,9 @@
 										</footer>
 									</section>
 								</div>
-								<!--<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="SharedLandscape.html"class="image featured"><img src="images/MatOutlinePics/MaterialOutlinePreview.png" alt="" /></a>
-										<header>
-											<h3>Shared Landscape System</h3>
-										</header>
-										<p>
-											This tutorial builds on the Persistent Trails tutorial and entails how to implement communication between layers for your landscape in Unreal Engine 4.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="SharedLandscape.html" class="button alt">View Implementation</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="FoliageDeform.html"class="image featured"><img src="images/MatOutlinePics/MaterialOutlinePreview.png" alt="" /></a>
-										<header>
-											<h3>Foliage Deformation System</h3>
-										</header>
-										<p>
-											This tutorial builds on the Shared Landscape Deformation System tutorial and entails how to implement foliage deformation in Unreal Engine 4.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="FoliageDeform.html" class="button alt">View Implementation</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="GlobalWindSys.html"class="image featured"><img src="images/MatOutlinePics/MaterialOutlinePreview.png" alt="" /></a>
-										<header>
-											<h3>Global Wind System</h3>
-										</header>
-										<p>
-											This tutorial builds on the Deformation system tutorial and entails how to implement a global wind system to your environments in Unreal Engine 4.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="GlobalWindSys.html" class="button alt">View Implementation</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
-								<!-- End UE4 Tutorials -->
+								<!--
+								 End UE4 Tutorials -->
 								<h2 style = "margin: auto;">  ALWAYS MORE COMING SOON! </h2>
-								<!-- End Game Jam Boxes-->
 
 							</div>
 						</section>
