--- a/CurseEater.html
+++ b/CurseEater.html
@@ -25,14 +25,14 @@
 				<nav id="nav">
 				  <ul>
 					<li ><a href="index.html">Home</a></li>
-					<li class="current">
-					  <a href="#">Projects</a>
-					  <ul>
-						<li><a href="GameJams.html">Game Jams</a></li>
-						<li><a href="GD50.html">GD50</a></li>
-						<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
-					  </ul>
-					</li>
+					<!--<li>
+                <a href="#">Projects</a>
+                <ul>
+                  <li><a href="GameJams.html">Game Jams</a></li>
+                  <li><a href="GD50.html">GD50</a></li>
+                  <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
+                </ul>
+              </li>-->
 					<li><a href="Portfolio.html">Portfolio</a></li>
 					<li><a href="Resume.html">Resume</a></li>
 					<li><a href="Work.html">Work</a></li>
@@ -56,6 +56,7 @@
 										<header>
 											<h2>Curse Eater</h2>
 											<p>A 3D RPG made using Unreal Engine 4</p>
+											<p>NOTE: images have been temporarily taken down while shaders are undergoing work. Any images shown could give an incorrect depiction of the game. Thank you for understanding!</p>
 										</header>
 										<p>
 											Curse Eater is an RPG set in a distant fictional land. The player is a curse eater, a manifestation created by a witch in her dying moments 
