--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,14 +21,14 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li>
-				<a href="#">Projects</a>
-				<ul>
-					<li><a href="GameJams.html">Game Jams</a></li>
-					<li><a href="GD50.html">GD50</a></li>
-					<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
-				</ul>
-				</li>
+				<!--<li>
+                <a href="#">Projects</a>
+                <ul>
+                  <li><a href="GameJams.html">Game Jams</a></li>
+                  <li><a href="GD50.html">GD50</a></li>
+                  <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
+                </ul>
+              </li>-->
 				<li class="current"><a href="Portfolio.html">Portfolio</a></li>
 				<li><a href="Resume.html">Resume</a></li>
 				<li><a href="Work.html">Work</a></li>
@@ -59,6 +59,22 @@
 								<!-- Start UE4 Tutorials -->
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
+										<a href="BolderGames.html"class="image featured"><img src="images/WorkPics/BG_Logo.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%;"/></a>
+										<header>
+											<h3>Bolder Games Released Titles</h3>
+										</header>
+										<p>
+											A collection of all the released titles at Bolder Games of which I've had the pleasure to work on. 
+										</p>
+										<footer>
+											<ul class="actions">
+												<li><a href="BolderGames.html" class="button alt">View Titles</a></li>
+											</ul>
+										</footer>
+									</section>
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+									<section class="box">
 										<a href="UE4-Tutorials.html"class="image featured"><img src="images/EducationPics/UE4logo.png" style="width: 50%; margin: auto; padding-top: 10%;"/></a>
 										<header>
 											<h3>Unreal Engine 4 Tutorials</h3>
@@ -75,7 +91,7 @@
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a href="CurseEater.html"class="image featured"><img src="images/CurseEaterCont/EclipseTest4.gif" style="padding-top: 10%; padding-bottom:5%;"/></a>
+										<a href="CurseEater.html"class="image featured"><img src="images/CurseEaterCont/EclipseTest4.gif" style="padding-top: 5%; "/></a>
 										<header>
 											<h3>Curse Eater: UE4 Project</h3>
 										</header>
@@ -91,7 +107,23 @@
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a href="https://github.com/GeorgesABrunet/Twisted-Loop/tree/master/BigBrainGameJam" class="image featured"><img src="images/GameJamPics/TDLGameplay.png" alt="" /></a>
+										<a href="GameJams.html"class="image featured"><img src="images/GameJamPics/OubliettesCover.png" style="padding-top: 5%; "/></a>
+										<header>
+											<h3>Game Jam Submissions</h3>
+										</header>
+										<p>
+											ALL (I think) the game jams I've participated in and the itch.io pages for them!
+										</p>
+										<footer>
+											<ul class="actions" style = "text-align: center; ">
+												<li><a href="GameJams.html" class="button alt">View Submissions</a></li>
+											</ul>
+										</footer>
+									</section>
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+									<section class="box">
+										<a href="https://github.com/GeorgesABrunet/Twisted-Loop/tree/master/BigBrainGameJam" class="image featured"><img src="images/GameJamPics/TDLGameplay.png" style="padding-top: 5%; "/></a>
 										<header>
 											<h3>Twisted Loop on Unity, C#</h3>
 										</header>
@@ -106,11 +138,11 @@
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a href="https://github.com/GeorgesABrunet/GameOff2020GameJam" class="image featured"><img src="images/GameJamPics/MMcover.png" alt="" /></a>
+										<a href="https://github.com/GeorgesABrunet/GameOff2020GameJam" class="image featured"><img src="images/GameJamPics/MMcover.png" style="padding-top: 5%; "/></a>
 										<header>
 											<h3>Mission Moon on Unity, C#</h3>
 										</header>
-										<p> Made with Olivia Maciejewska as our submission to the Game Off 2020 Game Jam, this prototype holds various implementations such as AI, shooting system, health and resource management system, wave spawning, 2.5D shaders, and more.
+										<p> Made with Olivia Maciejewska as our submission to the Game Off 2020 Game Jam, this prototype will test your mettle as you fight hordes of vicious enemies in order to make it to the moon.
 										</p>
 										<footer>
 											<ul class="actions">
