--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
           <nav id="nav">
             <ul>
               <li class="current"><a href="index.html">Home</a></li>
-              <li>
+              <!--<li>
                 <a href="#">Projects</a>
                 <ul>
                   <li><a href="GameJams.html">Game Jams</a></li>
                   <li><a href="GD50.html">GD50</a></li>
                   <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
                 </ul>
-              </li>
+              </li>-->
               <li><a href="Portfolio.html">Portfolio</a></li>
               <li><a href="Resume.html">Resume</a></li>
               <li><a href="Work.html">Work</a></li>
@@ -80,9 +80,10 @@
                 <p>
                   My name is Georges Brunet and I’m an aspiring Game Developer based in Colorado. 
                   Video games have always played a crucial role in my life and the work behind them fascinates me.
-                  Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art. I have a background in math and coding that has been a backbone in designing and making 
-                  the features I would like to see, specifically in the domains of game design and technical art.
-                  Most if not all of my creations will be available in the projects and portfolio tabs!
+                  Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art. 
+                  I have a background in math and coding that has been a backbone in designing and making 
+                  the features I would like to see, specifically in the domains of gameplay programming, game design and technical art.
+                  Most if not all of my creations will be available to see in the portfolio and work tabs!
                 </p>
                 <p>
                   I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics 
