--- a/Resume.html
+++ b/Resume.html
@@ -25,14 +25,14 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Projects</a>
-									<ul>
-									<li><a href="GameJams.html">Game Jams</a></li>
-									<li><a href="GD50.html">GD50</a></li>
-									<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
-									</ul>
-								</li>
+								<!--<li>
+                <a href="#">Projects</a>
+                <ul>
+                  <li><a href="GameJams.html">Game Jams</a></li>
+                  <li><a href="GD50.html">GD50</a></li>
+                  <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
+                </ul>
+              </li>-->
 								<li><a href="Portfolio.html">Portfolio</a></li>
 								<li class="current"><a href="Resume.html">Resume</a></li>
 								<li><a href="Work.html">Work</a></li>
@@ -47,21 +47,21 @@
 				<section id="main">
 					<div class="container">
 						<div class="row">
-							<div class="col-8 col-12-medium">
+							<div class="col-9 col-12-medium">
 
 								<!-- Content -->
 									<article class="box post">
 										<!--<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>-->
 										<header>
 											<!--<h2>Right sidebar</h2>-->
-											<p>Contact information available upon request</p>
+											<p style="text-align: center;">Contact information available upon request</p>
 										</header>
-										<iframe src="images/WebsiteResumeGB.pdf" width="100%" height="900px">
+										<iframe src="images/WebsiteResumeGB.pdf" width="100%" height="1200px">
 										</iframe>
 									</article>
 
 							</div>
-							<div class="col-4 col-12-medium">
+							<div class="col-3 col-12-medium">
 
 								<!-- Sidebar -->
 								<section class="box">
