--- a/Mission-Moon.html
+++ b/Mission-Moon.html
@@ -85,7 +85,8 @@
 										<p>
 											Ratings are underway until December 21 2020, so I will update this page when it is complete! I loved making the assets for this 
 											game as well as the effects and programming the aspects of the game. I plan on creating a game like this in 3D soon and will also 
-											release it on itch.io. Check the Game Jams page in projects for more!
+											release it on itch.io. Check the Game Jams page in projects for more! You can see the 
+											repository on Github <a href="https://github.com/GeorgesABrunet/GameOff2020GameJam">here</a>.
 										</p>
 									</article>
 
