--- a/Twisted-Loop.html
+++ b/Twisted-Loop.html
@@ -114,7 +114,8 @@
 											After voting, my game received 2nd place, and ranked 1st for visuals, theme, and tied for fun. There are still some bugs
 											to squash, so I received 3rd place for bug freeness.
 											As this game did not have any sounds, I did receive the lowest grade and ranking for that specific criteria. But had I scored just
-											half a point out of five in that area, I would've received first place! So lesson learned, always do a little more.
+											half a point out of five in that area, I would've received first place! So lesson learned, always do a little more. You can see the 
+											repository on Github <a href="https://github.com/GeorgesABrunet/Twisted-Loop/tree/master/BigBrainGameJam">here</a>.
 										</p>
 									</article>
 
