--- a/Work.html
+++ b/Work.html
@@ -51,7 +51,7 @@
 										<header>
 											<h2 style= "text-align: center;">Bolder Games</h2>
 											<p style= "text-align: center;"> </p>
-											<h3 style= "text-align: center;">Senior Developer</h3>
+											<h3 style= "text-align: center;">Lead Game Developer</h3>
 										</header>
 										<p>
 											As of June 2021, I have been working as a generalist developer at Bolder Games. My duties
@@ -68,7 +68,8 @@
 											As of December 2021, with the releases of the company's three remastered titles, I now work in the prototype development 
 											cycle that iterates each month. During these cycles we really target "finding the fun" given a few ideas and mechanics as a 
 											mold for the potential of the project. I hope that some of these will make it out of the woods so I can show all of you the 
-											wonderful titles the studio is conjuring!
+											wonderful titles the studio is conjuring! If you would like to know more about the work accomplished in these, please refer to 
+											the Bolder Games prototype page in my portfolio.
 										</p>
 										<h3 style= "text-align: center;"> Starballs </h3>
 										<a class="image featured"><img src="images/WorkPics/Starballs.png" style = "width: 35%; padding-top: 8%; margin:auto;" alt="" /></a>
