--- a/Education.html
+++ b/Education.html
@@ -24,21 +24,21 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-						  <li><a href="index.html">Home</a></li>
-						  <!--<li>
-                <a href="#">Projects</a>
-                <ul>
-                  <li><a href="GameJams.html">Game Jams</a></li>
-                  <li><a href="GD50.html">GD50</a></li>
-                  <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
-                </ul>
-              </li>-->
-						  <li><a href="Portfolio.html">Portfolio</a></li>
-						  <li><a href="Resume.html">Resume</a></li>
-						  <li><a href="Work.html">Work</a></li>
-						  <li class="current"><a href="Education.html">Education</a></li>
-						  <li><a href="Skills.html">Skills</a></li>
-						  
+							<li><a href="index.html">Home</a></li>
+							<!--<li>
+	  <a href="#">Projects</a>
+	  <ul>
+		<li><a href="GameJams.html">Game Jams</a></li>
+		<li><a href="GD50.html">GD50</a></li>
+		<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
+	  </ul>
+	</li>-->
+							<li><a href="Portfolio.html">Portfolio</a></li>
+							<li><a href="Resume.html">Resume</a></li>
+							<!--<li><a href="Work.html">Work</a></li>-->
+							<li class="current"><a href="Education.html">Education</a></li>
+							<li><a href="Skills.html">Skills</a></li>
+
 						</ul>
 					  </nav>
 
