Removing access to dep. pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     </li>-->
                   <li><a href="Portfolio.html">Portfolio</a></li>
                   <li><a href="Resume.html">Resume</a></li>
-                  <!--<li><a href="Work.html">Work</a></li>-->
                   <li><a href="Education.html">Education</a></li>
                   <li><a href="Skills.html">Skills</a></li>
 
@@ -78,24 +77,12 @@
                   <h2>Welcome!</h2>
                 </header>
                 <p>
-                  My name is Georges Brunet and I’m an aspiring Game Developer based in Colorado. 
+                  My name is Georges Brunet and I’m a Generalist Game Developer based in Colorado. 
                   Video games have always played a crucial role in my life and the work behind them fascinates me.
                   Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art. 
                   I have a background in math and coding that has been a backbone in designing and making 
                   the features I would like to see, specifically in the domains of gameplay programming, game design and technical art.
-                  Most if not all of my creations will be available to see in the portfolio and work tabs!
-                </p>
-                <p>
-                  I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics 
-                  with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university 
-                  I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of
-                  the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc. As of May 2020, I have fully 
-                  dedicated my time to a career in the games industry.
-                </p>
-                <p>
-                  In my free time, I enjoy trying out new features to implement, watching comedy, and the company of friends and family. 
-                  I like to make art, whether it be drawings, sculptures or paintings. I watch sports, and my personal favorite: play video games. 
-                  Have a look around my website and see if my work interests you. If it does, I can be contacted on LinkedIn, or email.
+                  Some of the work I've done will be available to see in the portfolio and work tabs!
                 </p>
               </article>
             </div>
