--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <section id="banner">
             <header>
               <h2>Hello. My name is Georges.</h2>
-              <p>Programmer, Artist, and Video Game Enthusiast</p>
+              <p>Programmer, and Video Game Enthusiast</p>
             </header>
           </section>
       </section>
@@ -77,11 +77,10 @@
                   <h2>Welcome!</h2>
                 </header>
                 <p>
-                  My name is Georges Brunet and I’m a Generalist Game Developer based in Colorado. 
+                  My name is Georges Brunet and I’m a Generalist Game Programmer based in Colorado. 
                   Video games have always played a crucial role in my life and the work behind them fascinates me.
-                  Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art. 
                   I have a background in math and coding that has been a backbone in designing and making 
-                  the features I would like to see, specifically in the domains of gameplay programming, game design and technical art.
+                  the features I would like to see and play, specifically in the domains of gameplay programming, game design and technical art.
                   Some of the work I've done will be available to see in the portfolio and work tabs!
                 </p>
               </article>
