Slight cleanup to portfolio page

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -81,7 +81,7 @@
 											<h3>Personal Prototypes</h3>
 										</header>
 										<p>
-											A collection of UE4 prototypes I sometimes work on in my free time. These are largely explorative projects. 
+											A collection of prototypes I sometimes work on in my free time. These are largely explorative projects. 
 										</p>
 										<footer>
 											<ul class="actions">
