--- a/CurseEater.html
+++ b/CurseEater.html
@@ -35,9 +35,7 @@
 	</li>-->
 						<li class="current"><a href="Portfolio.html">Portfolio</a></li>
 						<li><a href="Resume.html">Resume</a></li>
-						<!--<li><a href="Work.html">Work</a></li>-->
-						<li><a href="Education.html">Education</a></li>
-						<li><a href="Skills.html">Skills</a></li>
+						
 
 					</ul>
 				</nav>
@@ -56,7 +54,7 @@
 										<header>
 											<h2>Curse Eater</h2>
 											<p>A 3D RPG made using Unreal Engine 4</p>
-											<p>NOTE: images have been temporarily taken down while shaders are undergoing work. Any images shown could give an incorrect depiction of the game. Thank you for understanding!</p>
+											<p>NOTE: images have been temporarily taken down while shaders are undergoing work. Any images shown could give an incorrect depiction of the project. Thank you for understanding!</p>
 										</header>
 										<p>
 											Curse Eater is an RPG set in a distant fictional land. The player is a curse eater, a manifestation created by a witch in her dying moments 
