--- a/Portfolio.html
+++ b/Portfolio.html
@@ -31,9 +31,6 @@
 	</li>-->
 				<li class="current"><a href="Portfolio.html">Portfolio</a></li>
 				<li><a href="Resume.html">Resume</a></li>
-				<!--<li><a href="Work.html">Work</a></li>-->
-				<li><a href="Education.html">Education</a></li>
-				<li><a href="Skills.html">Skills</a></li>
 
 			</ul>
 			</nav>
@@ -61,10 +58,10 @@
 									<section class="box">
 										<a href="BolderGames.html"class="image featured"><img src="images/WorkPics/BG_Logo.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%;"/></a>
 										<header>
-											<h3>Bolder Games Released Titles</h3>
+											<h3>Bolder Games Titles</h3>
 										</header>
 										<p>
-											A collection of all the released titles at Bolder Games of which I've had the pleasure to work on. 
+											A collection of Bolder Games titles of which I've had the pleasure to work on. 
 										</p>
 										<footer>
 											<ul class="actions">
