--- a/Twisted-Loop.html
+++ b/Twisted-Loop.html
@@ -35,9 +35,6 @@
 	</li>-->
 						<li><a href="Portfolio.html">Portfolio</a></li>
 						<li><a href="Resume.html">Resume</a></li>
-						<!--<li><a href="Work.html">Work</a></li>-->
-						<li><a href="Education.html">Education</a></li>
-						<li><a href="Skills.html">Skills</a></li>
 
 					</ul>
 				</nav>
@@ -72,14 +69,14 @@
 											solo. The theme for the jam was to be Halloween oriented, or "spooky", so I created assets to match!
 											I wanted to use the knowledge that I gained in Unity with 2D rendering pipelines in unison 
 											with 3d objects. I wanted to test out the interactions of 3D objects with 2D objects. I also wanted to experiment
-											with shaders as I had only used them in a very light capacity in Oubliettes.
+											with shaders as I had only used them in a very light capacity at that point.
 										</p>
 										<header>
 											<h3>Inspiration</h3>
 										</header>
 										<p>
 											I did not want to create a huge game given the time constraint, but was keen on achieving the 3D to 2D 
-											interactions mentioned above. One minigame that came to mind was the pole dodging minigame in Kung Fu Chaos.
+											interactions mentioned above. One minigame that came to mind was the pole dodging minigame in Kung Fu Chaos. Super fun game, by the way. 
 											 In that game, the player must dodge a spinning pole as it speeds up with time. I decided to remake this concept
 											 with 2D sprites as characters, and a 3D spinning pole.
 										</p>
@@ -98,14 +95,14 @@
 										<p>
 											As the time constraint was short, there are a plethora of implementations I did not have time to make, and had 
 											to compromise for simplicity to complete the game. I wanted to create a sort of fade effect from shaders on the player 
-											and AI characters when they we struck by the pole and landed onto the lava, but I could not make the effect I desired 
+											and AI characters when they were struck by the pole and landed onto the lava, but I could not make the effect I desired 
 											in time so I made the AI shoot out of range of the pole when struck, and then relocated them to their respective base 
 											after a certain amount of time. I implemented the same thing for the player character, but experienced some strange behavior.
 											I wanted to add some sound and visual effects to the experience, such as the pole spinning, hitting characters, music, the 
 											characters expressing shouts of pain when struck, their fading into lava, as well as camera shakes when a character was struck 
 											by the pole. Unfortunately, I could not implement these in the 72 hour period given. 
-											I was able to squash out the main bugs in time for submission, but there is still room for improvement! I intend to update 
-											this game when I have the time to achieve all the desired effects, but still, I am happy with the results.
+											I was able to squash out the main bugs in time for submission, but there is still room for improvement! Realistically I probably
+											 won't fix this game but I'd love to take this idea up a notch.
 										</p>
 										<header>
 											<h3>Results</h3>
