--- a/Mission-Moon.html
+++ b/Mission-Moon.html
@@ -35,9 +35,6 @@
 	</li>-->
 						<li><a href="Portfolio.html">Portfolio</a></li>
 						<li><a href="Resume.html">Resume</a></li>
-						<!--<li><a href="Work.html">Work</a></li>-->
-						<li><a href="Education.html">Education</a></li>
-						<li><a href="Skills.html">Skills</a></li>
 
 					</ul>
 				</nav>
@@ -74,7 +71,7 @@
 											important element, fun. We overhauled it with 4 days remaining to make it a survival shooter! Olivia designed a neat enemy AI with 
 											solid pathfinding and combat elements as well as directives. I implemented a combat system for the player, dynamic layered animation schemes 
 											for all entities in game, a wave system to distribute the enemies at random locations across the ship, object and player health 
-											system, win and lose states, world-space indicators, a dynamic-rendering pipeline, as well as all the shaders and art assets.
+											system, win and lose states, some shaders and more aaaand there. Game jam.
 
 											
 										</p>
